--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js", 
-    "build": "tsc -b",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "postinstall": "prisma generate",
+  "start": "node dist/index.js",
+  "build": "tsc -b",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
